<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nursery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="forgot_password"><u>Forgot password?</u></string>

    <!-- Menu Items and Navigation Menu Item-->
    <string name="home_screen">Home</string>
    <string name="classes_nav_menu_item">Classes</string>
    <string name="schedule_nav_menu_item">Schedule</string>
    <string name="events_nav_menu_item">Events</string>
    <string name="add_post_nav_menu_item">Add Post</string>
    <string name="settings_nav_menu_item">Settings</string>

    <!-- Upcoming Event -->
    <string name="event_title">Title:</string>
    <string name="event_place">Place:</string>
    <string name="event_date">Date:</string>
    <string name="event_fees">Fees:</string>
    <string name="event_comment">Comment:</string>

    <string name="gallery">Gallery</string>
    <string name="current_month_events_label">Current Month Events</string>
    <string name="last_month_events_label">Last Month Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="comment">Comments</string>
    <string name="date_label">Date</string>
    <string name="day_label">Day</string>
    <string name="schedule_label">Schedule</string>
    <string name="edit_label">Edit</string>
    <string name="breakfast">Breakfast</string>
    <string name="garden">Garden Time</string>
    <string name="snacks">Snacks</string>
    <string name="launch">Launch</string>

    <string name="english_class">English Class</string>
    <string name="math_class">Math Class</string>
    <string name="arabic_class">Arabic Class</string>
    <string name="religion_class">Religion Class</string>
    <string name="mentesory_class">Mentesory Class</string>
    <string name="description">Description</string>
    <string name="breakfast_time">08:00 am</string>
    <string name="class_one_time">09:00 am</string>
    <string name="garden_time_one">10:00 am</string>
    <string name="class_two_time">11:00 am</string>
    <string name="snack_time">12:00 pm</string>
    <string name="class_three_time">12:30 pm</string>
    <string name="garden_time_two">01:30 am</string>
    <string name="launch_time">02:30 pm</string>

    <!-- for edit schedule activity-->
    <string name="first_class">First Class</string>
    <string name="second_class">Second Class</string>
    <string name="third_class">Third Class</string>
    <string name="title_label">title</string>
    <string name="description_label">description</string>
    <string name="time_label">time</string>
    <string name="class_one">Class 1</string>
    <string name="class_two">Class 2</string>
    <string name="class_three">Class 3</string>

    <!-- Buttons  -->
    <string name="ok_btn">ok</string>
    <string name="change_btn">Change</string>
    <string name="reset_btn">Reset</string>
    <string name="next_btn" tools:ignore="ExtraTranslation">Next</string>
    <string name="save_btn">Save</string>
    <string name="back_btn">Back</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <!-- Child Data -->
    <string name="edit_student_details_label">Edit Student Details</string>
    <string name="student_details_label">Student Details</string>
    <string name="childID_label">Child ID:</string>
    <string name="childName_label">Child Name:</string>
    <string name="childLastName_label">Last Name:</string>
    <string name="childFatherName_label">Father\'s Name:</string>
    <string name="childFatherNumber_label">Phone:</string>
    <string name="childMotherName_label">Mother\'s Name:</string>
    <string name="childMotherNumber_label">Phone:</string>
    <string name="childAge_label">Age:</string>
    <string name="childGender_label">Gender:</string>
    <string name="boy_label">Boy</string>
    <string name="girl_label">Girl</string>
    <string name="childBDate_label">BirthDate:</string>
    <string name="childTelephone_label">Parent Telephone:</string>
    <string name="childClassName_label">Class Name:</string>
    <string name="childComment_label">Comment:</string>
    <string name="years_label">years</string>
    <string name="child_profile_picture">Profile Picture</string>
    <string name="father_id_picture">Father\'s ID picture</string>
    <string name="mother_id_picture">Mother\'s ID picture</string>
    <string name="fathers_data">Father\'s Data</string>
    <string name="mothers_data">Mother\'s Data</string>
    <string name="years">years</string>
    <string name="medical_issue">Any Medical Issues?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="if_yes_please_write_a_description">If yes, please write a description about it</string>

    <string name="title_activity_child_info">ChildInfoActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_child_info_">ChildInfo_Activity</string>
    <string name="title_activity_child_data">ChildDataActivity</string>

    <!-- Post -->
    <string name="post_title">Post Title</string>
    <string name="post_owner">Post Owner</string>
    <string name="post_date">Post Date</string>
    <string name="post_details">Post Details</string>
    <string name="add_post">Add Post</string>
    <string name="change_post_img">Change Image</string>
    <string name="post_image_description">Post Image Description</string>

    <!-- Class Details Menu -->
    <string name="add_child">Add Child</string>
    <string name="move_child">Move Child</string>

    <!-- Edit Class Data -->
    <string name="class_name">Class Name</string>
    <string name="class_label">Class</string>
    <string name="main_teacher">Miss:</string>
    <string name="co_teacher">co-Teacher:</string>

    <string-array name="modify_popup_menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string name ="edit_current_event">Current </string>
    <string name ="edit_last_month_event">Last Month</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
