<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.EditChildDataFragmentOne">

    <LinearLayout android:id="@+id/childName_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView android:id="@+id/childName_label"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/childName_label"
            android:textSize="9pt"/>

        <EditText android:id="@+id/childName_value"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:textSize="9pt"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/childFatherName_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView android:id="@+id/childFatherName_label"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/childFatherName_label"
            android:textSize="9pt"/>

        <EditText android:id="@+id/childFatherName_value"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:textSize="9pt"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/childFatherNumber_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView android:id="@+id/childFatherNumber_label"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/childFatherNumber_label"
            android:textSize="9pt"/>

        <EditText android:id="@+id/childFatherNumber_value"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:textSize="9pt"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/childMotherName_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView android:id="@+id/childMotherName_label"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/childMotherName_label"
            android:textSize="9pt"/>

        <EditText android:id="@+id/childMotherName_value"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:textSize="9pt"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/childMotherNumber_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView android:id="@+id/childMotherNumber_label"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/childMotherNumber_label"
            android:textSize="9pt"/>

        <EditText android:id="@+id/childMotherNumber_value"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:textSize="9pt"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/childID_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView android:id="@+id/childID_label"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/childID_label"
            android:textSize="9pt"/>

        <EditText android:id="@+id/childID_value"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:textSize="9pt"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/layout_btns"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_weight="1">

        <Button android:id="@+id/reset_btn_fragOne"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/reset_btn"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@color/colorAccent"
            android:layout_marginEnd="5dp"
            android:textSize="9pt"/>

        <Button android:id="@+id/next_btn"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_weight="1"
            android:text="@string/next_btn"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@color/colorAccent"
            android:layout_marginStart="5dp"
            android:textSize="9pt"/>

    </LinearLayout>

</LinearLayout>