<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <ImageView android:id="@+id/addPostImage_imgView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/happy"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/post_image_description"/>

    <RelativeLayout android:id="@+id/postData_layout"
        android:layout_below="@+id/addPostImage_imgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

            <LinearLayout android:layout_height="wrap_content" android:id="@+id/post_title_date_layout"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <android.support.design.widget.TextInputLayout android:id="@+id/postTitle_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/postTitle_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:hint="@string/post_title"
                        android:textColor="@android:color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:id="@+id/postDate_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/postDate_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_alignBaseline="@+id/postTitle_layout"
                        android:ems="10"
                        android:inputType="date"
                        android:hint="@string/post_date" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout android:id="@+id/postOwner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_title_date_layout">

                <EditText
                android:id="@+id/postOwner_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/post_owner"
                android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/postDetails_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postOwner_layout">

            <EditText
                android:id="@+id/postDetails_editText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:drawablePadding="10dp"
                android:minHeight="200dp"
                android:gravity="top"
                android:hint="@string/post_details" />
        </android.support.design.widget.TextInputLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu android:id="@+id/postActionFloatingMenu"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:fab_addButtonColorNormal="@color/colorAccent"
            app:fab_addButtonColorPressed="@color/color_white"
            app:fab_addButtonPlusIconColor="@color/color_lightBlue1"
            app:fab_labelStyle="@style/custom_floatingbutton_style">

            <com.getbase.floatingactionbutton.FloatingActionButton android:id="@+id/addPost_floatingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/color_white"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_add_white_24dp"
                app:fab_title="@string/add_post"
                />

            <com.getbase.floatingactionbutton.FloatingActionButton android:id="@+id/changePostImg_floatingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/color_white"
                app:fab_size="mini"
                app:fab_icon="@drawable/ic_mode_edit_white_24dp"
                app:fab_title="@string/change_post_img"
                />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

</RelativeLayout>